--- a/web/bootstrap-3.3.7-dist/css/bootstrap.css
+++ b/web/bootstrap-3.3.7-dist/css/bootstrap.css
@@ -2353,7 +2353,7 @@ table th[class*="col-"] {
 .table-hover > tbody > tr.active:hover > td,
 .table-hover > tbody > tr:hover > .active,
 .table-hover > tbody > tr.active:hover > th {
-  background-color: #e8e8e8;
+  background-color: #6B6666;
 }
 .table > thead > tr > td.success,
 .table > tbody > tr > td.success,
@@ -2374,7 +2374,7 @@ table th[class*="col-"] {
 .table-hover > tbody > tr.success:hover > td,
 .table-hover > tbody > tr:hover > .success,
 .table-hover > tbody > tr.success:hover > th {
-  background-color: #d0e9c6;
+  background-color: #6B6666;
 }
 .table > thead > tr > td.info,
 .table > tbody > tr > td.info,
@@ -2395,7 +2395,7 @@ table th[class*="col-"] {
 .table-hover > tbody > tr.info:hover > td,
 .table-hover > tbody > tr:hover > .info,
 .table-hover > tbody > tr.info:hover > th {
-  background-color: #c4e3f3;
+  background-color: #6B6666;
 }
 .table > thead > tr > td.warning,
 .table > tbody > tr > td.warning,
@@ -2416,7 +2416,7 @@ table th[class*="col-"] {
 .table-hover > tbody > tr.warning:hover > td,
 .table-hover > tbody > tr:hover > .warning,
 .table-hover > tbody > tr.warning:hover > th {
-  background-color: #faf2cc;
+  background-color: #6B6666;
 }
 .table > thead > tr > td.danger,
 .table > tbody > tr > td.danger,
@@ -2437,7 +2437,7 @@ table th[class*="col-"] {
 .table-hover > tbody > tr.danger:hover > td,
 .table-hover > tbody > tr:hover > .danger,
 .table-hover > tbody > tr.danger:hover > th {
-  background-color: #ebcccc;
+  background-color: #6B6666;
 }
 .table-responsive {
   min-height: .01%;
@@ -2448,7 +2448,7 @@ table th[class*="col-"] {
     width: 100%;
     margin-bottom: 15px;
     overflow-y: hidden;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
+    /* -ms-overflow-style: -ms-autohiding-scrollbar; */
     border: 1px solid #ddd;
   }
   .table-responsive > .table {
@@ -3562,7 +3562,7 @@ tbody.collapse.in {
 .dropdown-menu > li > a:focus {
   color: #262626;
   text-decoration: none;
-  background-color: #f5f5f5;
+  background-color: #5F5E5E;
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
